--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,6 @@ ext {
     junitVersion = '5.10.1'
 }
 
-sourceCompatibility = '20'
-targetCompatibility = '20'
-
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
@@ -28,6 +25,12 @@ tasks.withType(JavaCompile).configureEach {
 application {
     mainModule = 'io.github.wuerzburgtransportguide'
     mainClass = 'io.github.wuerzburgtransportguide.HelloApplication'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 dependencies {
@@ -40,17 +43,17 @@ openApiGenerate {
     generatorName.set("java")
     library.set("retrofit2")
     inputSpec.set("$rootDir/specs/netzplan.yml")
-    outputDir.set("$buildDir/generated")
+    outputDir.set(layout.buildDirectory.dir("generated").map {
+        it.asFile.absolutePath
+    })
+    invokerPackage.set("io.github.wuerzburgtransportguide.client")
     apiPackage.set("io.github.wuerzburgtransportguide.api")
-    invokerPackage.set("io.github.wuerzburgtransportguide.invoker")
     modelPackage.set("io.github.wuerzburgtransportguide.model")
-    configOptions.set([
-            dateLibrary: "java8"
-    ])
+    configOptions.set([dateLibrary: "java8"])
 }
 
 javafx {
-    version = '20.0.2'
+    version = '21.0.1'
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
@@ -59,8 +62,8 @@ test {
 }
 
 jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    imageZip = layout.buildDirectory.file("distributions/app-${javafx.platform.classifier}.zip")
+    options = ['--strip-debug', '--compress', 'zip-6', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'app'
     }
