Fix jlink build and jpackage

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group 'io.github'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 repositories {
 	mavenCentral()
@@ -123,8 +123,11 @@ jlink {
 		'--no-header-files',
 		'--no-man-pages'
 	]
+	mergedModule {
+		excludeRequires('org.jetbrains.annotations')
+	}
 	launcher {
-		name = 'app'
+		name = 'WuerzburgTransportGuide'
 	}
 }
 
