--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ tasks.withType(JavaCompile).configureEach {
 
 application {
 	mainModule = 'io.github.wuerzburgtransportguide'
-	mainClass = 'io.github.wuerzburgtransportguide.HelloApplication'
+	mainClass = 'io.github.wuerzburgtransportguide.App'
 }
 
 java {
