--- a/specs/netzplan.yml
+++ b/specs/netzplan.yml
@@ -3,8 +3,8 @@ info:
   title: Netzplan
   version: 1.0.0
 servers:
-- url: https://netzplan.vvm-info.de/api
-  description: The netzplan API
+  - url: https://netzplan.vvm-info.de/api
+    description: The Netzplan API
 paths:
   /journeyplanners/efa_xml/locations/de%3A09663%3A208/stationboard/departure:
     get:
@@ -63,23 +63,19 @@ paths:
                         weekday:
                           type: number
           headers:
-            X-RateLimit-Limit:
-              description: '120'
-              schema:
-                type: number
             Content-Type:
               description: application/json
               schema:
                 type: string
       parameters:
-      - name: locale
-        in: query
-        required: false
-        schema:
-          type: string
+        - name: locale
+          in: query
+          required: false
+          schema:
+            type: string
 x-path-templates:
-# Remove the ignore: prefix to generate an endpoint with its URL
-# Lines that are closer to the top take precedence, the matching is greedy
-- ignore:/bc-drawing/ilnp
-- ignore:/maps/tlnp/layersets
-- ignore:/wms-layers/wvvwuerzburg_haltestellen_gesamt/features
+  # Remove the ignore: prefix to generate an endpoint with its URL
+  # Lines that are closer to the top take precedence, the matching is greedy
+  - ignore:/bc-drawing/ilnp
+  - ignore:/maps/tlnp/layersets
+  - ignore:/wms-layers/wvvwuerzburg_haltestellen_gesamt/features
