--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 	implementation 'com.google.code.gson:gson:2.10.1'
+	implementation 'com.gluonhq:maps:2.0.0-ea+6' exclude group: 'org.openjfx'
 	implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0-M1'
 	implementation 'org.jetbrains:annotations:24.1.0'
 
