--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 	implementation 'com.gluonhq:maps:2.0.0-ea+6' exclude group: 'org.openjfx'
 	implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0-M1'
 	implementation 'org.jetbrains:annotations:24.1.0'
+	implementation 'org.apache.commons:commons-text:1.11.0'
 
 	testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
 	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
