--- a/specs/netzplan.yml
+++ b/specs/netzplan.yml
@@ -207,7 +207,7 @@ paths:
                                   properties:
                                     coords:
                                       type: string
-                                      format: coords
+                                      format: coordinates
                                     platform:
                                       type: string
                           stopSeq:
@@ -250,7 +250,7 @@ paths:
                                       nullable: true
                           path:
                             type: string
-                            format: coordsList
+                            format: coordinatesList
                     products:
                       type: array
                       items:
