Add stops and line layer

--- a/specs/netzplan.yml
+++ b/specs/netzplan.yml
@@ -230,6 +230,7 @@ paths:
                                   properties:
                                     coords:
                                       type: string
+                                      format: coordinates
                                     platform:
                                       type: string
                                     depDelay:
